# enigma2

./: AUTHORS  ChangeLog  NEWS  README  skin.py
data/: startwizard.xml
data/rc_models/: Makefile.am  rc_models.cfg
data/skin_default/spinner/: Makefile.am
lib/python/Components/: NimManager.py  SetupDevices.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/backupsfteam/: Makefile.am  backup.sh  plugin.py
lib/python/Screens/: InstallWizard.py  LanguageSelection.py
po/: es.po
