installdir = $(pkgdatadir)/skin_default/spinner

dist_install_DATA = \
    wait0.png \
	wait1.png \
	wait2.png \
	wait3.png \
	wait4.png \
	wait5.png \
	wait6.png \
	wait7.png \
	wait8.png \
	wait9.png \
	wait10.png \
	wait11.png \
	wait12.png \
	wait13.png \
	wait14.png \
	wait15.png \
	wait16.png \
	wait17.png \
	wait18.png \
	wait19.png \
	wait20.png \
	wait21.png \
	wait22.png \
	wait23.png \
	wait24.png \
	wait25.png \
	wait26.png \
	wait27.png \
	wait28.png \
	wait29.png \
	wait30.png \
	wait31.png \
	wait32.png \
	wait33.png \
	wait34.png \
	wait35.png \
	wait36.png \
	wait37.png \
	wait38.png \
	wait39.png \
	wait40.png \
	wait41.png \
	wait42.png \
	wait43.png \
	wait44.png \
	wait45.png \
	wait46.png \
	wait47.png \
	wait48.png
